--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "17.0.1",
     "react-icons": "4.3.1",
     "react-loader-spinner": "4.0.0",
+    "react-responsive-carousel": "3.2.23",
     "react-router-dom": "5.2.0",
     "react-slick": "0.28.1",
     "reactjs-popup": "2.0.5",
